--- a/gestion_tributaria/src/app/app.component.html
+++ b/gestion_tributaria/src/app/app.component.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" [routerLink]="['/orders']" routerLinkActive="active">Orders</a>
+          <a class="nav-link" aria-current="page" [routerLink]="['/planes']" routerLinkActive="active">Generar Planes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/customers']" routerLinkActive="active">Customers</a>
