--- a/gestion_tributaria/src/app/business/customers/customers.component.html
+++ b/gestion_tributaria/src/app/business/customers/customers.component.html
@@ -1,2 +1,19 @@
-<br>
-<h3 style="padding: 10px;">Custormers List</h3>
+<div class="container">
+    <h1 class="text-center mb-2">Angular jQuery Datatables Example - Tutsmake.com</h1>
+    <div class="row mt-2">
+      <div class="col-lg-10 mx-auto">
+    <table id="example" class="display" class="table mx-auto">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Body</th>
+      </tr>
+    </thead>
+      <tbody>
+        <!-- DataTable will populate rows here -->
+      </tbody>
+  </table>
+    </div>
+    </div>
+  </div>
