--- a/gestion_tributaria/src/app/app.component.html
+++ b/gestion_tributaria/src/app/app.component.html
@@ -27,6 +27,9 @@
           <a class="nav-link" [routerLink]="['/customers']" routerLinkActive="active">Customers</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="active">Orders</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active">Products</a>
         </li>
       </ul>
