--- a/gestion_tributaria/src/app/business/orders/orders.component.html
+++ b/gestion_tributaria/src/app/business/orders/orders.component.html
@@ -1,20 +1,37 @@
 <div class="container">
-    <h1 class="text-center mb-2">Angular jQuery Datatables Example - Tutsmake.com</h1>
-    <div class="row mt-2">
-      <div class="col-lg-10 mx-auto">
-    <table id="example" class="display" class="table mx-auto">
-  
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Body</th>
-      </tr>
-    </thead>
-      <tbody>
-        <!-- DataTable will populate rows here -->
-      </tbody>
-  </table>
-    </div>
-    </div>
+  <h4>New Booking</h4>
+  <div class="row">
+      <div class="col-8"> 
+        <div class="row">
+            <div class="col-3">
+                <label>Name</label>
+                <input type="text" class="form-control"  [(ngModel)]="bookingObj.name" />
+            </div>
+            <div class="col-3">
+                <label>Mobile</label>
+                <input type="text" class="form-control"  [(ngModel)]="bookingObj.mobileNo" />
+            </div>
+            <div class="col-3">
+                <label>Email</label>
+                <input type="text" class="form-control"  [(ngModel)]="bookingObj.email" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <label>Aadhar No</label>
+                <input type="text" class="form-control"  [(ngModel)]="bookingObj.aadharNo" />
+            </div>
+            <div class="col-3">
+                <label>City</label>
+                <input type="text" class="form-control"  [(ngModel)]="bookingObj.city" />
+            </div>
+        </div>
+        
+      </div>
   </div>
+  <div class="row pt-3">
+      <div class="col-8 text-center">
+        <button class="btn btn-success" (click)="onSaveBooking()">Create New Booking</button>
+      </div>
+  </div>
+</div>
