metodo consultar por numeroRuc

--- a/gestion_tributaria/src/app/business/planes/planes.component.html
+++ b/gestion_tributaria/src/app/business/planes/planes.component.html
@@ -159,8 +159,9 @@
                             (click)="getPlanes()"><i class="zmdi zmdi-arrow-right"></i> &nbsp;&nbsp; Consultar Registros
                             Plan</button>
                         <button type="button" id="siguiente" value="Siguiente" class="btn btn-primary"
-                            (click)="getPlanes()"><i class="zmdi zmdi-arrow-right"></i> &nbsp;&nbsp; Ejecutar
-                            Plan</button>
+                            (click)="getFindByNumeroRuc()"><i class="zmdi zmdi-arrow-right"></i> &nbsp;&nbsp; Consultar
+                            Registro por RUC
+                        </button>
                     </p>
                 </div>
             </div>
